feat: 完善部署相关说明文档及脚本